# cuda-fractal

./: CMakeLists.txt  Makefile  README.md  wenv
bitmap/: CMakeLists.txt  Makefile  bitmap.cpp  bitmap_test.cpp
gui/: CMakeLists.txt  Makefile  README.md
gui/src/: control.cpp  control.h  display.cpp  display.h  image.cpp  image.h  main.cpp  mainpanel.cpp  mainpanel.h  mainwindow.cpp  mainwindow.h
include/: bitmap.h  gpu.h  gpu_error.cuh
lib/: .gitignore  mandelbrot.cu
mandelbrot/: .gitignore  CMakeLists.txt  Makefile  color.cuh  color_defs.cuh  concat_array.cuh  const_util.cuh  generate_array.cuh  main.cpp  make_array.cuh  mandelbrot.cu
saxpy/: CMakeLists.txt  Makefile  gpu_error.cuh  saxpy.cu
stride/: CMakeLists.txt  Makefile  stride.cu
